# conference-reader

./: CLAUDE.md  blog_post_topics.md  claude.md  cleanup-script.sh  explore_docling_metadata.py  explore_timings.py  main.py  ocr_diagnosis.json  pyproject.toml  rocm-provided.txt  setup-project.sh  todo.txt  tunableop_results0.csv
.devcontainer/: Dockerfile  devcontainer.json  setup-environment.sh
datasets/eval/: validator_ground_truth.json
doc/: 1_next_session.md  DOCLING_METADATA_FINDINGS.md  DOCLING_METRICS_GUIDE.md  QWEN_VL_ROCM_STABILITY_RESEARCH.md  SESSION_2026-01-14_SUMMARY.md  SMOLLM3_EXPERIMENTATION_RESULTS.md  blog_post_findings.md  docling_exploration_prompt.md  issues.md  ocr_failure_investigation.md  ocr_improvements_notes.md
output/: ocr_extracted_posters.json  poster_v_qr.csv  posters.csv  serialized_document_extractions.pkl
scripts/: QWEN_VL_TESTING.md  diagnose_ocr.py  experiment_qwen_vl.py  experiment_smollm3.py  experiment_validator.py  run_qwen_experiment.sh  run_stable.sh  serialize_documents.py  simple_docling_vlm.py  test_all_modes.sh  vlm_poster_extraction.py
src/conference_reader/: old_test.py
src/conference_reader/classifier/: __init__.py  image_classifier.py  vlm_backend.py
src/conference_reader/config/: __init__.py  rocm_config.py
src/conference_reader/extraction/: __init__.py  document_extractor.py  processed_document.py  valid_image_config.py
src/conference_reader/image_loader/: __init__.py  image_loader.py
src/conference_reader/output/: __init__.py  csv_exporter.py  output_writer.py
src/conference_reader/summarization/: __init__.py  text_summarizer.py
tests/: test_csv_exporter.py  test_document_extractor.py  test_image_classifier.py  test_processed_document.py
