[project]
name = "conference-reader"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.67.0",
    "tomli>=2.3.0",
    "tomli-w>=1.2.0",
    "transformers>=4.57.3",
    "pillow>=10.0.0",
    "accelerate>=0.20.0",
]

[tool.uv]
exclude-dependencies = [
    "absl-py",
    "aiohappyeyeballs",
    "aiohttp",
    "aiosignal",
    "amdsmi",
    "apex",
    "attrs",
    "black",
    "boto3",
    "botocore",
    "build",
    "certifi",
    "cffi",
    "cfgv",
    "charset-normalizer",
    "click",
    "cmake",
    "colorama",
    "contourpy",
    "cryptography",
    "cuda-bindings",
    "cuda-pathfinder",
    "cxxfilt",
    "cycler",
    "dataclasses-json",
    "deprecated",
    "dill",
    "distlib",
    "distro",
    "execnet",
    "expecttest",
    "fbscribelogger",
    "filelock",
    "flake8",
    "flatbuffers",
    "fonttools",
    "frozenlist",
    "fsspec",
    "future",
    "ghstack",
    "grpcio",
    "hypothesis",
    "identify",
    "idna",
    "imageio",
    "iniconfig",
    "jinja2",
    "jmespath",
    "junitparser",
    "kiwisolver",
    "lark",
    "lazy-loader",
    "lintrunner",
    "llvmlite",
    "lxml",
    "markdown",
    "markupsafe",
    "marshmallow",
    "matplotlib",
    "mccabe",
    "ml-dtypes",
    "mpmath",
    "multidict",
    "mypy",
    "mypy-extensions",
    "networkx",
    "ninja",
    "nodeenv",
    "numba",
    "numpy",
    "onnx",
    "onnx-ir",
    "onnxscript",
    "opt-einsum",
    "optree",
    "packaging",
    "pandas",
    "parameterized",
    "pathspec",
    "pillow",
    "pip",
    "platformdirs",
    "pluggy",
    "ply",
    "pre-commit",
    "propcache",
    "protobuf",
    "psutil",
    "pulp",
    "pwlf",
    "pycodestyle",
    "pycparser",
    "pydoe",
    "pyflakes",
    "pygithub",
    "pygments",
    "pyjwt",
    "pynacl",
    "pyparsing",
    "pyproject-hooks",
    "pyre-extensions",
    "pytest",
    "pytest-cpp",
    "pytest-flakefinder",
    "pytest-rerunfailures",
    "pytest-shard",
    "pytest-subtests",
    "pytest-xdist",
    "python-dateutil",
    "pytokens",
    "pytz",
    "pywavelets",
    "pyyaml",
    "pyzstd",
    "redis",
    "requests",
    "s3transfer",
    "scikit-build",
    "scikit-image",
    "scipy",
    "setuptools",
    "setuptools-git-versioning",
    "six",
    "sortedcontainers",
    "sympy",
    "tabulate",
    "tensorboard",
    "tensorboard-data-server",
    "thriftpy2",
    "tifffile",
    "tlparse",
    "torch",
    "torchaudio",
    "torchvision",
    "tqdm",
    "triton",
    "typing-extensions",
    "typing-inspect",
    "tzdata",
    "unittest-xml-reporting",
    "urllib3",
    "uv",
    "virtualenv",
    "werkzeug",
    "wheel",
    "wrapt",
    "xdoctest",
    "yarl",
    "z3-solver",
]
