[project]
name = "conference-reader"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.67.0",
    "tomli>=2.3.0",
    "tomli-w>=1.2.0",
    "transformers>=4.57.3",
    "pillow>=10.0.0",
    "accelerate>=0.20.0",
    "pytesseract>=0.3.13",
]

[tool.uv]
exclude-dependencies = [
    "apex",
    "black",
    "cfgv",
    "click",
    "contourpy",
    "cxxfilt",
    "cycler",
    "distlib",
    "filelock",
    "flake8",
    "fonttools",
    "fsspec",
    "hypothesis",
    "identify",
    "iniconfig",
    "jinja2",
    "kiwisolver",
    "markupsafe",
    "matplotlib",
    "mccabe",
    "mpmath",
    "mypy-extensions",
    "networkx",
    "ninja",
    "nodeenv",
    "numpy",
    "packaging",
    "pandas",
    "pathspec",
    "pillow",
    "pip",
    "platformdirs",
    "pluggy",
    "pre-commit",
    "pycodestyle",
    "pyflakes",
    "pygments",
    "pyparsing",
    "pytest",
    "python-dateutil",
    "pytokens",
    "pyyaml",
    "scipy",
    "setuptools",
    "six",
    "sortedcontainers",
    "sympy",
    "torch",
    "torchaudio",
    "torchvision",
    "tqdm",
    "triton",
    "typing-extensions",
    "uv",
    "virtualenv",
]
